# sagittarius-smart-card

./: CMakeLists.txt  README.md  example.scm  load.scm  start.scm
contrib/: CMakeLists.txt
contrib/pcsc/dictionary/: gp.scm
contrib/pcsc/key/: gemalto.scm  rim.scm
samples/: get-status.scm  isd.scm
src/: CMakeLists.txt  pcsc.scm
src/pcsc/: control.scm  operations.scm  raw.scm  shell.scm
src/pcsc/operations/: apdu.scm  control.scm  gp.scm  program.scm
src/pcsc/raw/: dll.incl  helper.scm  retcode.scm  scard.scm  types.scm  winscard.scm
src/pcsc/shell/: commands.scm  repl.scm
test/: apdu.scm  gp.scm
